<resources>
    <string name="app_name">AGRO</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase">Purchase</string>
    <string name="sales">Sales</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_nwelcome_to_agro">Hello,\nWelcome to Agro</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="country_code">+91</string>
    <string name="get_otp">get otp</string>
    <string name="ex_number">for ex : 8940400791</string>
    <string name="add_sales">add sales</string>
    <string name="customer_name">Customer Name</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="save_and_new">save and new</string>
    <string name="save">save</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="screen_off_description">Prevent the Screen off while using the app</string>
    <string name="configuration">Configuration</string>
    <string name="app_language">App Language</string>
    <string name="tamil">Tamil</string>
    <string name="english">English</string>
    <string name="search_here">Search here...</string>
    <string name="app_icon">App Icon</string>
    <string name="change_app_icon">Change app icon</string>
    <string name="include_tax">Include Tax</string>
    <string name="exclude_tax">Exclude Tax</string>

    <!--theme-->
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow System</string>
    <string name="auto_day_night">Auto(Day/Night)</string>
    <string name="lightTheme">LightTheme</string>
    <string name="darkTheme">DarkTheme</string>
    <string name="followSystem">FollowSystem</string>
    <string name="auto">Auto</string>
    <string name="app_update">App Update</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_as_image">Share as Image</string>
    <string name="share_as_pdf">Share as PDF</string>
    <string name="bill_to">Bill To :</string>
    <string name="share_image">Share Image</string>
    <string name="share_pdf">Share Pdf</string>
    <string name="save_image">Save image</string>
    <string name="svae_pdf">Save Pdf</string>
    <string name="company_name">Company Name :</string>
    <string name="phone_no">Phone No :</string>
    <string name="change_company">Change Company</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="sales_invoice">Sales Invoice</string>
    <string name="start_date">Start Date</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="search">search</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="balance">Balance</string>
    <string name="amount">Amount</string>
    <string name="pay_account">Pay account</string>
    <string name="pay_type">Pay type</string>
    <string name="cancel">Cancel</string>
    <string name="purchase_invoice">Purchase Invoice</string>
    <string name="product_in">Product :</string>
    <string name="verify">Verify your number</string>
    <string name="verify_number">Verify</string>
    <string name="otp_hint">Enter the OTP sent to +</string>
    <string name="todo">TODO</string>
    <string name="product_name">Product Name</string>
    <string name="add">Add</string>
    <string name="sale_price">Sale Price</string>
    <string name="goods">GOODS</string>
    <string name="services">SERVICES</string>
    <string name="all">ALL</string>
    <string name="add_products">Add Products</string>
    <string name="product_details">Product Details</string>
    <string name="discount_with_colon">Discount :</string>
    <string name="quantity_with_colon">Quantity :</string>
    <string name="price_with_colon">Price :</string>
    <string name="tax_amount_with_colon">Tax Amount :</string>


</resources>